kubernetes-manifests/protected-ingress.yaml
# kubernetes-manifests/protected-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: protected-routes-ingress
  annotations:
    # A ESTE INGRESS SÍ LE APLICAMOS NUESTRO PLUGIN DE SEGURIDAD
    konghq.com/plugins: jwt-validation-plugin
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
        - path: /tutorias
          pathType: Prefix
          backend:
            service:
              name: ms-tutorias-service
              port:
                number: 3000
